nginx-ip2location-8.1.0
=======================
Ported codes from https://github.com/chaizhenhua/ngx-ip2location to support all fields in IP2Location database.

nginx-ip2location-8.0.0
=======================
Added supports to IP2Location-C-8.0.0

nginx-ip2location-7.0.0
=======================
Added supports to IP2Location-C-7.0.0

nginx-ip2location-1.0
=====================
First public release.