@@ -1,6 +1,6 @@
 MIT License
 
-Copyright (c) 2020 IP2Location.com
+Copyright (c) 2021 IP2Location.com
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
