@@ -1,3 +1,5 @@
+Refer to https://github.com/ip2location/ip2location-nginx to release notes.
+
 nginx-ip2location-8.1.0
 =======================
 Ported codes from https://github.com/chaizhenhua/ngx-ip2location to support all fields in IP2Location database.
